# NyayaRAG

./: .env.example  .gitignore  COLAB_ARTIFACTS.md  README.md  pyproject.toml
app/: streamlit_app.py
data/samples/: case_input.txt  statute_chunks.jsonl
notebooks/: colab_build_artifacts.ipynb  kaggle_build_artifacts.ipynb
scripts/: build_bm25.py  build_sample_artifacts.py  colab_build_qwen_qdrant.py  colab_full_build.py  prepare_corpus.py  run_app.py
src/nyayarag/: __main__.py  chunking.py  cli.py  config.py  embeddings.py  groq_client.py  preprocessing.py  prompts.py  schema.py
src/nyayarag/generation/: answer.py  parser.py
src/nyayarag/retrieval/: bm25.py  hybrid.py  qdrant_store.py
tests/: test_parser.py  test_preprocessing.py  test_retrieval.py
